<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_white"
        android:orderInCategory="100"
        android:title="@string/button_search_title"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh_white"
        android:title="@string/button_refresh_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_add_white"
        android:title="@string/button_add_title"
        app:showAsAction="ifRoom" />

</menu>